fix wordwrap if base64 is too long

--- a/src/stylesheets/components/typography.scss
+++ b/src/stylesheets/components/typography.scss
@@ -6,15 +6,15 @@ html{
     line-height: 1.5;
 
     @media only screen and (min-width: 0) {
-        font-size: 14px;
+        font-size: 12px;
     }
 
     @media only screen and (min-width: $medium-screen) {
-        font-size: 14.5px;
+        font-size: 13px;
     }
 
     @media only screen and (min-width: $large-screen) {
-        font-size: 15px;
+        font-size: 14px;
     }
 
     font-family: "Roboto", sans-serif;
